feat: initial commit

--- a/rafi.blogspot/src/components/Footer.astro
+++ b/rafi.blogspot/src/components/Footer.astro
@@ -34,9 +34,9 @@ import IconLinkedin from "./icon-component/IconLinkedin.astro";
     </nav>
 
     <div class="flex justify-center space-x-3 py-8 border-b border-b-[#363636] mb-8">
-        <IconGmail />
-        <IconGithub />
-        <IconLinkedin />
+        <IconGmail class="hover:scale-110 transition duration-300 ease-in-out cursor-pointer"/>
+        <IconGithub class="hover:scale-110 transition duration-300 ease-in-out cursor-pointer"/>
+        <IconLinkedin class="hover:scale-110 transition duration-300 ease-in-out cursor-pointer"/>
     </div>
 
     <p class="text-lg font-normal text-white self-center">@ Mohamad Rafi Irfansyah 2024</p>
