feat: add the base of blog development (still many broken code)

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,19 +7,19 @@
             class="text-sm font-normal px-3 py-2 rounded-xl cursor-pointer focus-within:bg-[#1C1C1C] focus-within:outline-none"
             tabindex="0"
         >
-            Home
+            <a href="/">Home</a>
         </li>
         <li 
             class="text-sm font-normal px-3 py-2 rounded-xl cursor-pointer focus-within:bg-[#1C1C1C] focus-within:outline-none"
             tabindex="1"
         >
-            About
+            <a href="/">About</a>
         </li>
         <li 
             class="text-sm font-normal px-3 py-2 rounded-xl cursor-pointer focus-within:bg-[#1C1C1C] focus-within:outline-none"
             tabindex="2"
         >
-            Blog
+            <a href="/blog">Blog</a>
         </li>
     </ul>
     <img 
