feat: adding blog tag button

--- a/public/global.css
+++ b/public/global.css
@@ -9,3 +9,14 @@
         white 60%
     );
 }
+
+html {
+    font-family: 'Inter Variable', sans-serif;
+}
+
+body {
+    background-color: #161616;
+}
+
+
+  
