--- a/src/components/CustomPageTitle.astro
+++ b/src/components/CustomPageTitle.astro
@@ -1,10 +1,11 @@
 ---
 interface Props {
     title: string
+    textSize?: string
 }
 
-const { title } = Astro.props
+const { title, textSize } = Astro.props
 ---
-<span class="w-fit font-bold text-5xl bg-gradient-to-r from-[#F6F6F6] to-[#909090] bg-clip-text text-transparent pb-1">
+<span class={`${textSize || 'text-5xl'} w-fit font-bold bg-gradient-to-r from-[#F6F6F6] to-[#909090] bg-clip-text text-transparent pb-1`}>
     {title}
 </span>
