--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,24 +3,20 @@
 ---
 <nav class="flex justify-between px-20 py-6 border-b border-b-[#282828] mb-14">
     <ul class="flex space-x-6 text-white items-center">
-        <li 
-            class="text-sm font-normal px-3 py-2 rounded-xl cursor-pointer focus-within:bg-[#1C1C1C] focus-within:outline-none"
-            tabindex="0"
-        >
-            <a href="/">Home</a>
-        </li>
-        <li 
-            class="text-sm font-normal px-3 py-2 rounded-xl cursor-pointer focus-within:bg-[#1C1C1C] focus-within:outline-none"
-            tabindex="1"
-        >
-            <a href="/">About</a>
-        </li>
-        <li 
-            class="text-sm font-normal px-3 py-2 rounded-xl cursor-pointer focus-within:bg-[#1C1C1C] focus-within:outline-none"
-            tabindex="2"
-        >
-            <a href="/blog">Blog</a>
-        </li>
+        {['Home', 'About', 'Blog'].map((item, index) => {
+            const link = item === 'Home' ? '/' : `/${item.toLowerCase()}`;
+            const isActive = Astro.url.pathname === link;
+            return (
+                <li 
+                    class={`text-sm font-normal px-3 py-2 rounded-xl cursor-pointer ${
+                        isActive ? 'bg-[#1C1C1C]' : ''
+                    }`}
+                    tabindex={index}
+                >
+                    <a href={link}>{item}</a>
+                </li>
+            );
+        })}
     </ul>
     <img 
         src="/assets/MMRI.svg"
