--- a/src/components/blog/BlogTag.astro
+++ b/src/components/blog/BlogTag.astro
@@ -5,6 +5,6 @@ interface Props {
 
 const { tags } = Astro.props
 ---
-<div class="py-2 px-3 rounded-full">
-    <p class="text-white font-normal text-base">{tags}</p>
+<div class="py-2 px-3 rounded-full bg-[#272727] text-[#F6F6F6]">
+    <p class="font-normal text-sm">{tags}</p>
 </div>
