--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -9,35 +9,45 @@ interface Props {
     imgUrl?: string
     tags: string[]
     href: string
+    duration: string
 }
 
-const { title, description, imgUrl, tags, href } = Astro.props
+const { title, description, imgUrl, tags, href, duration } = Astro.props
 ---
 
-<a href={href}>
-    <div 
-        class="flex flex-col justify-self-center border border-[#242424] bg-[#1C1C1C] rounded-sm w-fit cursor-pointer"
-    >
-        <CldImage 
-            src={imgUrl || "https://res.cloudinary.com/rafirfansyah/image/upload/v1731826909/React_Image_s6nsdn.png"}
-            height={234}
-            alt="Blog Image"
-            class="w-full"
-        />
-        <div
-            class="p-4 flex flex-col justify-start"
+<div class="justify-self-center" data-post data-tags={JSON.stringify(tags)}>
+    <a href={href}>
+        <div 
+            class="flex flex-col border border-[#242424] bg-[#1C1C1C] rounded-sm cursor-pointer w-[430px] h-[436px]"
         >
-            <p class="text-sm font-semibold text-[#F6F6F6]">{title}</p>
-            <p class="text-sm font-normal text-[#858585] mb-4">{description}</p>
-            <div class="flex space-x-2 items-center">
-                <Icon name="mingcute:time-line" class="text-white"/>
-                <p class="text-sm text-[#858585] font-normal">5 Minutes</p>
-            </div>
-            <div class="flex space-x-4">
-                {tags.map((tag) => (
-                    <BlogTag tags={tag}/>
-                ))}
+            <CldImage 
+                src={imgUrl || "https://res.cloudinary.com/rafirfansyah/image/upload/v1731826909/React_Image_s6nsdn.png"}
+                width={430}
+                height={234}
+                alt="Blog Image"
+                class="image-style"
+            />
+            <div
+                class="p-4 flex flex-col justify-start"
+            >
+                <p class="text-sm font-semibold text-[#F6F6F6]">{title}</p>
+                <p class="text-sm font-normal text-[#858585] mb-4">{description}</p>
+                <div class="flex space-x-2 items-center">
+                    <Icon name="mingcute:time-line" class="text-white"/>
+                    <p class="text-sm text-[#858585] font-normal">{duration}</p>
+                </div>
+                <div class="flex space-x-4 mt-6">
+                    {tags.map((tag) => (
+                        <BlogTag tags={tag}/>
+                    ))}
+                </div>
             </div>
         </div>
-    </div>
-</a>
+    </a>
+</div>
+
+<style>
+    .image-style img {
+        border-radius: 12px;
+    }
+</style>
