--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -26,6 +26,7 @@ const { title, description } = Astro.props;
 <style is:global>
 	html {
 		font-family: 'Inter Variable', sans-serif;
+		scroll-behavior: smooth;
 	}
 
 	body {
