feat: adding search using javascript DOM, and 404 page

--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -30,8 +30,8 @@ const { title, description, imgUrl, tags, href, duration } = Astro.props
             <div
                 class="p-4 flex flex-col justify-start"
             >
-                <p class="text-sm font-semibold text-[#F6F6F6]">{title}</p>
-                <p class="text-sm font-normal text-[#858585] mb-4">{description}</p>
+                <p class="text-sm font-semibold text-[#F6F6F6] post-title">{title}</p>
+                <p class="text-sm font-normal text-[#858585] mb-4 post-description">{description}</p>
                 <div class="flex space-x-2 items-center">
                     <Icon name="mingcute:time-line" class="text-white"/>
                     <p class="text-sm text-[#858585] font-normal">{duration}</p>
