--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,5 +6,14 @@ import MainLayout from "../layouts/MainLayout.astro"
     title="Index"
     description="Index Example"
 >
-    <p>tes</p>
+    <div class="min-h-screen flex items-center justify-center font-inter">
+        <div class="text-center">
+        <h1 class="text-[64px] font-semibold text-[#F6F6F6] mb-4">
+            Under Construction
+        </h1>
+        <p class="text-[20px] font-medium text-[#909090]">
+            We're working hard to bring you something amazing. Stay tuned!
+        </p>
+        </div>
+    </div>
 </MainLayout>
