feat: adding section 1 home and search function

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,15 @@
 ---
+import StackBox from "@components/StackBox.astro"
 import MainLayout from "../layouts/MainLayout.astro"
+import Introduction from "src/section/home/Introduction.astro"
+
 ---
 
 <MainLayout
     title="Index"
     description="Index Example"
 >
-    <div class="min-h-screen flex items-center justify-center font-inter">
-        <div class="text-center">
-        <h1 class="text-[64px] font-semibold text-[#F6F6F6] mb-4">
-            Under Construction
-        </h1>
-        <p class="text-[20px] font-medium text-[#909090]">
-            We're working hard to bring you something amazing. Stay tuned!
-        </p>
-        </div>
+    <div class="px-32 flex flex-col">
+        <Introduction />
     </div>
 </MainLayout>
