feat: adding home banner and change font

--- a/src/components/CustomPageTitle.astro
+++ b/src/components/CustomPageTitle.astro
@@ -6,6 +6,6 @@ interface Props {
 
 const { title, textSize } = Astro.props
 ---
-<span class={`${textSize || 'text-5xl'} w-fit font-bold bg-gradient-to-r from-[#F6F6F6] to-[#909090] bg-clip-text text-transparent pb-1`}>
+<span class={`${textSize || 'text-5xl'} w-fit font-bold bg-gradient-to-r from-[#F6F6F6] to-[#909090] bg-clip-text text-transparent pb-1 gilroy`}>
     {title}
 </span>
