--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<nav class="flex justify-between px-20 py-6 border-b border-b-[#282828] mb-14">
+<nav class="flex justify-between px-20 py-6 border-b border-b-[#282828]">
     <ul class="flex space-x-6 text-white items-center">
         {['Home', 'About', 'Blog'].map((item, index) => {
             const link = item === 'Home' ? '/' : `/${item.toLowerCase()}`;
