--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,6 +3,8 @@ import BaseHead from '@components/BaseHead.astro';
 import Footer from '@components/Footer.astro';
 import Navbar from '@components/Navbar.astro';
 import '@fontsource-variable/inter';
+import { AstroFont } from 'astro-font';
+import { join } from "node:path";
 
 interface Props {
 	title: string
@@ -16,6 +18,39 @@ const { title, description } = Astro.props;
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
+			<AstroFont
+				config={[
+					{
+						name: "Gilroy",
+						src: [
+							{
+								style: 'normal',
+								weight: '400',
+								path: join(process.cwd(), 'public', 'fonts', 'Gilroy-Regular.ttf')
+							},
+							{
+								style: 'medium',
+								weight: '500',
+								path: join(process.cwd(), 'public', 'fonts', 'Gilroy-Medium.ttf')
+							},
+							{
+								style: 'semibold',
+								weight: '600',
+								path: join(process.cwd(), 'public', 'fonts', 'Gilroy-SemiBold.ttf')
+							},
+							{
+								style: 'bold',
+								weight: '700',
+								path: join(process.cwd(), 'public', 'fonts', 'Gilroy-Bold.ttf')
+							}
+						],
+						preload: false,
+						display: "swap",
+						selector: ".gilroy",
+						fallback: "sans-serif",
+					},
+				]}
+			/>
 	</head>
 	<body>
 		<Navbar />
