--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -21,7 +21,7 @@ const tags = Array.from(
     title="Index"
     description="Index Example"
 >
-    <div class="flex flex-col px-20 pb-72 justify-center">
+    <div class="flex flex-col px-20 pb-72 pt-14 justify-center">
         <div class="flex flex-col mb-11">
             <CustomPageTitle 
                 title="Blog"
