--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import StackBox from "@components/StackBox.astro"
 import MainLayout from "../layouts/MainLayout.astro"
 import Introduction from "src/section/home/Introduction.astro"
+import Traits from "src/section/home/Traits.astro"
 
 ---
 
@@ -11,5 +12,6 @@ import Introduction from "src/section/home/Introduction.astro"
 >
     <div class="px-32 flex flex-col">
         <Introduction />
+        <Traits />
     </div>
 </MainLayout>
