--- a/src/section/home/Introduction.astro
+++ b/src/section/home/Introduction.astro
@@ -1,19 +1,54 @@
 ---
 import CustomPageTitle from "@components/CustomPageTitle.astro"
 import HomeButton from "@components/HomeButton.astro"
+import StackBox from "@components/StackBox.astro"
+
 ---
-<div class="px-28 flex flex-col items-center justify-center text-center section1-container">
+<div class="px-28 pb-56 pt-56 flex flex-col items-center justify-center text-center section1-container">
+    <img src="/assets/home/section1_home_bg.svg" alt="bg image" class="absolute -z-20 top-[88px]"/>
+    <StackBox 
+        text="Tailwind CSS"
+        imageSource="/assets/icons/tailwind_stackbox_svg.svg"
+        position="absolute"
+        extendedClass="top-48 left-36 rotate-2"
+    />
+    <StackBox 
+        text="Javascript"
+        imageSource="/assets/icons/javascript_stackbox_svg.svg"
+        position="absolute"
+        extendedClass="bottom-8 right-[124px] rotate-2"
+    />
+    <StackBox 
+        text="Next.js"
+        imageSource="/assets/icons/nextjs_stackbox_svg.svg"
+        position="absolute"
+        extendedClass="top-[152px] right-[187px] rotate-[13deg]"
+    />
+    <StackBox 
+        text="React"
+        imageSource="/assets/icons/react_stackbox_svg.svg"
+        position="absolute"
+        extendedClass="top-[396px] right-20 -rotate-[4deg]"
+    />
+    <StackBox 
+        text="HTML"
+        imageSource="/assets/icons/html_stackbox_svg.svg"
+        position="absolute"
+        extendedClass="top-[481px] left-[88px] -rotate-[4deg]"
+    />
     <CustomPageTitle 
         title="Building digital experiences that leave a mark on the world."
         textSize="text-[64px]"
     />
-    <p class="text-[#909090] font-medium text-xl mt-2 mb-12">Hey, I'm Rafi, crafting the web with passion and precision</p>
-    <HomeButton 
-        text="Read my blog"
-    />
+    <p class="text-[#909090] font-medium text-xl mt-2 mb-14">Hey, I'm Rafi, crafting the web with passion and precision</p>
+    <div class="flex items-center justify-center space-x-1">
+        <HomeButton 
+            text="Read my blog"
+        />
+        <button class="rounded-[10px] text-[#A2A2A2] text-lg font-medium bg-[#161616] px-8 py-3">
+            My Resume
+        </button>
+    </div>
 </div>
 <style>
-    .section1-container {
-
-    }
 </style>
