feat: adding traits

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Traits from "src/section/home/Traits.astro"
     title="Index"
     description="Index Example"
 >
-    <div class="px-32 flex flex-col">
+    <div class="px-4 md:px-32 flex flex-col">
         <Introduction />
         <Traits />
     </div>
